# fullhearts

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  cconanfile.txt  conanfile.py  conanfile.txt  imgui.ini
.circleci/: config.yml
.github/workflows/: ci-workflow.yml
cmake_scripts/: compiler_setup.cmake  postbuild_copy.cmake
data/: fonts.txt  images.txt
docs/style_guide/: programming_style_guide.aux  programming_style_guide.out  programming_style_guide.tex  programming_style_guide.toc
licenses/: MIT-license.txt
scripts/: perm.py
shaders/: debug_line_shader.shd  default_texture_shader.shd  example_fragmentshader.frag  example_vertexshader.vert  line_shader.shd  lineshader.shd  rectangle_primative_shader.shd  simple_texture.shd  testshader0.shd  testshader1.shd  vertexshader.vert
shaders/data/: dflttxtfrag.frag  dflttxtvert.vert  line.frag  line.vert  (+10 more)
src/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  engine.cpp  fh.vcxproj  fh.vcxproj.filters  fullhearts.sln  inputargs.cpp  main.cc  main.cpp  parallax.cpp  space.cpp  spacemanager.cpp  stub.hpp  systemmanager.cpp  threadpool.cpp  trace.cpp  wstr.cpp
src/audio/: CMakeLists.txt  audio.cc  audio_event.cc  sdl_audio.cc  sdl_audiomanager.cc
src/components/: CMakeLists.txt  basic_shape.cc  component.cc  dummy.cc  physics.cc
src/core/: CMakeLists.txt  allocator.cc  args.cc  assets.cc  debug.cc  dummy.cc  engine.cc  exception.cc  exceptions.cc  framewatcher.cc  gameobject.cc  interpreter.cc  json_io.cc  memory_manager.cc  networking.cc  script_object.cc  scripting.cc  serialization.cc  settings.cc  space.cc  spacemanager.cc  thread_pool.cc
src/engine/: CMakeLists.txt  engine.cpp  systemmanager.cpp
src/events/: CMakeLists.txt  event_manager.cc  events.cc  shutdown_event.cc
src/factory/: CMakeLists.txt  background_factory.cc  blueprint.cc  button_factory.cc  factory.cc
src/graphics/: CMakeLists.txt  auto_sprite.cc  background.cc  background_factory.cc  bounding_box.cc  buffer_manager.cc  camera.cc  circle.cc  color.cc  colors.cc  coordinates.cc  debug_draw.cc  default_sprite.cc  draw_lines.cc  draw_rects.cc  drawable.cc  font.cc  font_manager.cc  graphic_buffer_manager.cc  graphic_buffers.cc  graphics.cc  graphics_debug.cc  graphics_primatives.cc  image.cc  input.cc  input_event.cc  line2d.cc  opengl_graphics.cc  opengl_image.cc  point2d.cc  polygon.cc  raw_texture_data.cc  rect2d.cc  rectangle.cc  s_image.cc  sdl_graphics.cc  sdl_text.cc  sdl_text_image.cc  shader.cc  shape.cc  (+14 more)
src/include/: allocator.hpp  args.hpp  assets.hpp  audio.hpp  audio_event.hpp  audiomanager.hpp  auto_sprite.hpp  background.hpp  background_factory.hpp  basic_shape.hpp  behavior.hpp  benchmark.hpp  bitmanip.hpp  blueprint.hpp  bounding_box.hpp  buffer_manager.hpp  button.hpp  button_collider.hpp  button_factory.hpp  cache.hpp  camera.hpp  circle.hpp  click_watcher.hpp  collider.hpp  color.hpp  colors.hpp  component.hpp  component_order.hpp  container_utils.hpp  coordinates.hpp  data_conversions.hpp  debug.hpp  debug_draw.hpp  default_sprite.hpp  delegate.hpp  draw_lines.hpp  draw_rects.hpp  draw_test_scene.hpp  drawable.hpp  dummy.hpp  (+111 more)
src/input/: CMakeLists.txt  input.cc  input_event.cc  sdl_input.cc
src/io/: CMakeLists.txt  inputargs.cpp
src/lib/: audio.lib
src/log/: CMakeLists.txt  log.cc
src/messaging/: CMakeLists.txt  messaging.cpp
src/physics/: CMakeLists.txt  button_collider.cc  collider.cc  physics.cc  transform.cc
src/scenes/: CMakeLists.txt  draw_test_scene.cc  scene_mm.cc  scene_sandbox.cc  scene_serializationtest.cc  scene_splashscreen.cc  scenemanager.cc  scenes.cc
src/settings/: CMakeLists.txt  settings.cc
src/spaces/: CMakeLists.txt  object.cpp  space.cpp  spacemanager.cpp
src/src/audio/: audio.vcxproj  audio.vcxproj.filters  cmake_install.cmake
src/src/audio/audio.dir/Debug/: audio.vcxproj.FileListAbsolute.txt
src/src/audio/audio.dir/Debug/audio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  audio.lastbuildstate  audio.write.1u.tlog
src/src/components/: components.vcxproj  components.vcxproj.filters
src/src/components/components.dir/Debug/components.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  components.lastbuildstate
src/src/core/: core.vcxproj  core.vcxproj.filters
src/src/core/core.dir/Debug/core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  core.lastbuildstate
src/src/events/: cmake_install.cmake  events.vcxproj  events.vcxproj.filters
src/src/factory/: cmake_install.cmake  factory.vcxproj  factory.vcxproj.filters
src/src/graphics/: cmake_install.cmake  graphics.vcxproj  graphics.vcxproj.filters
src/src/log/: log.vcxproj  log.vcxproj.filters
src/src/physics/: cmake_install.cmake  physics.vcxproj  physics.vcxproj.filters
src/src/scenes/: cmake_install.cmake  scenes.vcxproj  scenes.vcxproj.filters
src/src/tests/: cmake_install.cmake  tests.vcxproj  tests.vcxproj.filters
src/src/ui/: cmake_install.cmake  ui.vcxproj  ui.vcxproj.filters
src/src/utils/: utils.vcxproj  utils.vcxproj.filters
src/tests/: CMakeLists.txt  benchmark.cc  test.cc  tests.cc
src/threads/: CMakeLists.txt  threadpool.cpp
src/trace/: CMakeLists.txt  trace.cpp
src/ui/: CMakeLists.txt  button.cc  mouse_collider.cc
src/utils/: CMakeLists.txt  args.cc  bitmanip.cc  click_watcher.cc  fs_util.cc  func_utils.cc  generators.cc  graphic_utils.cc  hardware.cc  input_listener.cc  machinegun_call.cc  notify.cc  num_utils.cc  str_util.cc  strutils.cpp  timer.cc  timer_manager.cc  type_utils.cc  utils.cc  utils.cpp
src/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
src/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
tools/: ccperm.cc
(+2 files in other folders)
